[build-system]
requires = [
    "setuptools>=69",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ls-core"
version = "0.0.1"
description = "In-house library for pipeline TDs"
requires-python = "==3.11.6"
dependencies = [
    "pydantic==2.8",
    "PySide6==6.7.2",
    "requests==2.32.3",
    "django==4.2",
]

[project.optional-dependencies]
# must install for devs
dev = ["pre-commit==3.7.0"]
# only if you have a specific local use for them
# or if you want to integrate them with your IDE
dev-lint = ["ruff==0.3.7", "mypy==1.9.0"]

[tool.ruff]
target-version = "py311"

[tool.ruff.format]
# Use single quotes for non-triple-quoted strings.
quote-style = "single"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint]
# Enable most popular linting rules
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
